--- a/Kopigrad/Components/Pages/Home.razor
+++ b/Kopigrad/Components/Pages/Home.razor
@@ -1,7 +1,18 @@
 ﻿@page "/"
+@inject Models.KopigradContext DbContext
 
 <PageTitle>Home</PageTitle>
 
 <h1>Hello, world!</h1>
 
 Welcome to your new app.
+
+@foreach (var category in DbContext.Categories.ToList())
+{
+    <h5>@category.NameCategory</h5>
+}
+
+
+@code{
+
+}
