косячно сделанная шапка

--- a/Kopigrad/Components/App.razor
+++ b/Kopigrad/Components/App.razor
@@ -9,6 +9,11 @@
     <link rel="stylesheet" href="app.css" />
     <link rel="stylesheet" href="Kopigrad.styles.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
+    <link rel="stylesheet" href="~/admin.css?v=1.0.1" />
+
+
+
+
     <HeadOutlet />
 </head>
 
