--- a/Kopigrad/Components/Layout/NavMenu.razor
+++ b/Kopigrad/Components/Layout/NavMenu.razor
@@ -1,30 +1,32 @@
-﻿<div class="top-row ps-3 navbar navbar-dark">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="">Kopigrad</a>
+﻿<head>
+    <link rel="stylesheet" href="admin.css">
+</head>
+
+    <div class="ShapkaAdmin">
+
+    <div >
+        <h1 class="TextShapka">+7 (902) 587-66-97</h1>
+        <h1 class="TextShapkaTwo">+7 (343) 20-666-97</h1>
     </div>
+
+    <div >
+        <div class="lineWhite"></div>
+    </div>
+
+    <div>
+        <h1 class="TextShapka">сopygrad96@mail.ru</h1>
+        <h1 class="TextShapkaTwo">Белореченская 17/1</h1>
+    </div>
+
+    <div class="LogoContainer">
+        <img class="LogoImage" src="/Image/logoKopigrad.png" />
+    </div>
+
+    <div class="DivImageContackt">
+        <img class="ContactImage" src="/Image/email.png" />
+        <img class="ContactImage" src="/Image/watsap.png" />
+        <img class="ContactImage" src="/Image/telegram.png" />
+    </div>
+
+
 </div>
-
-<input type="checkbox" title="Navigation menu" class="navbar-toggler" />
-
-<div class="nav-scrollable" onclick="document.querySelector('.navbar-toggler').click()">
-    <nav class="flex-column">
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
-            </NavLink>
-        </div>
-
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
-            </NavLink>
-        </div>
-
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="weather">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
-            </NavLink>
-        </div>
-    </nav>
-</div>
-
