--- a/Kopigrad/Components/Pages/Home.razor
+++ b/Kopigrad/Components/Pages/Home.razor
@@ -3,15 +3,9 @@
 
 <PageTitle>Home</PageTitle>
 
-<h1>Hello, world!</h1>
-
-Welcome to your new app.
-
-@foreach (var category in DbContext.Categories.ToList())
-{
-    <h5>@category.NameCategory</h5>
-}
-
+<div class="Banner">
+    <h5 class="TextBanner">Панель админа</h5>
+</div>
 
 @code{
 
