--- a/Kopigrad/Components/Layout/Admin/AdminListMenu.razor
+++ b/Kopigrad/Components/Layout/Admin/AdminListMenu.razor
@@ -3,6 +3,7 @@
 
 <div class="TextContainerMenuAdmin">
     <h5 @onclick="Servise" class="TextMenu">Услуги</h5>
+    <h5 @onclick="Material" class="TextMenu">Материалы</h5>
     <h5 @onclick="Requst" class="TextMenu">Заявки</h5>
     <h5 @onclick="Pdf" class="TextMenu">PDF расчет</h5>
 </div>
@@ -20,5 +21,11 @@
     public void Pdf()
     {
         Navigation.NavigateTo("/Pdf");
+    }
+
+
+    public void Material ()
+    {
+        Navigation.NavigateTo("/AddMaterial");
     }
 }
